# ridgeplot-py

./: .pre-commit-config.yaml  404.html  Example.ipynb  README.md  colors.py  data.json  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  ridgeplot.py  setup.py
.github/workflows/: ci.yaml  deploy_doc.yaml
colors/: index.html
docs/: colors.md  dotted_heatmap.md  index.md  ridge_plot.md  stats.md
dotted_heatmap/: index.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6d7188ef3b443e3d___init___py.html  z_6d7188ef3b443e3d_colors_py.html  z_6d7188ef3b443e3d_dotted_heatmap_py.html  z_6d7188ef3b443e3d_ridge_plot_py.html  z_6d7188ef3b443e3d_stats_py.html
ridge_plot/: index.html
ridgeplot/: __init__.py  colors.py  dotted_heatmap.py  ridge_plot.py  stats.py
search/: search_index.json
src/ridgeplot/: __init__.py  colors.py  ridge_plot.py  stats.py
stats/: index.html
test/: test_colors.py  test_dotted_heatmap.py  test_ridge_plot.py  test_ridgeplot.py  test_stats.py
