[project]
name = "ridgeplot-py"
dynamic = ["version"]
description = "Plotting ridgeplots with matplotlib"
authors = [{ name = "Douglas Wu", email = "wckdouglas@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "scipy>=1.8.0",
    "matplotlib>=3.8",
    "more-itertools>=8.9.0",
    "numpy>=1.21.1",
    "pandas>=2.2.2",
    "poetry>=1.8.3",
]

[tool.rye]
dev-dependencies = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "mypy>=0.990",
    "ruff>=0.0.290",
    "pre-commit>=3.7.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "scipy.*"]
ignore_errors = true

[tool.ruff]
line-length = 120
select = ['E', 'F', 'W', 'I']


[tool.hatch.build.targets.wheel]
packages = ["src/ridgeplot"]
